--- a/smart_systems/python/assignment1.ipynb
+++ b/smart_systems/python/assignment1.ipynb
@@ -48,23 +48,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "odd\n"
+      "4 is even\n"
      ]
     }
    ],
    "source": [
     "x = int(input('enter a number: '))\n",
     "if x % 2 == 0:\n",
-    "    print('even')\n",
+    "    print(f'{x} is even')\n",
     "else:\n",
-    "    print('odd')"
+    "    print(f'{x} is odd')"
    ]
   },
   {
